[gd_scene load_steps=2 format=3 uid="uid://c6g8f3x1vj3w"]

[ext_resource type="Script" path="res://scripts/HomeScreen.gd" id="1_0x8qx"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8qx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.3, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
text = "MATH GAME"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_font_size_override("font_size", 48)
add_theme_color_override("font_color", Color(1, 1, 1, 1))

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
text = "START GAME"
add_theme_font_size_override("font_size", 24)

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 300.0
text = "Controls:
WASD or Arrow Keys - Move
Space - Jump
Left Click - Shoot Laser

Collect all yellow gems while avoiding red enemies!"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_font_size_override("font_size", 16)
add_theme_color_override("font_color", Color(0.8, 0.8, 0.8, 1))

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"] 